--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formspree/react": "^2.5.1",
+    "framer-motion": "^10.16.4",
+    "lottie-react": "^2.4.0",
+    "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.1"
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
